# mysimrobot

./: .gitignore  CMakeLists.txt  KULLANIM_KOMUTLARI.md  README.md  package.xml
config/: fork_controllers.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  routes.yaml  twist_mux.yaml
description/: depth_camera.xacro  fork_control.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mysimrobot/share/mysimrobot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mysimrobot/share/mysimrobot/cmake/: mysimrobotConfig.cmake
install/mysimrobot/share/mysimrobot/config/: twist_mux.yaml
install/mysimrobot/share/mysimrobot/description/: robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/mysimrobot/share/mysimrobot/launch/: joystick.launch.py  rsp.launch.py
launch/: joystick.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
log/: latest_build
maps/: maps.pgm  maps.yaml
scripts/: fork_teleop.py  obstacle_wait_node.py  route_tool.py
worlds/: empty.world  teknofest_arena.world
